BattleShips - Android/src/pt/rmartins/battleships/parser/gamemodes/ParserGameModes.java
/* Generated By:JavaCC: Do not edit this line. ParserGameModes.java */
package pt.rmartins.battleships.parser.gamemodes;

import java.io.InputStream;
import java.io.ByteArrayInputStream;
import java.util.List;
import java.util.ArrayList;

import android.util.Log;

import pt.rmartins.battleships.objects.ShipClass;
import pt.rmartins.battleships.objects.PlayerClass.Shot.KindShot;
import pt.rmartins.battleships.objects.modes.GameBonus;
import pt.rmartins.battleships.objects.modes.GameMode;
import pt.rmartins.battleships.objects.modes.GameMode.MessagesMode;
import pt.rmartins.battleships.objects.modes.GameMode.BonusPlay;
import pt.rmartins.battleships.objects.modes.GameMode.BonusPlay.ConditionType;

public class ParserGameModes implements ParserGameModesConstants {

        public static List<GameMode> parseGameModes(String s)
        {
                return parseGameModes(new ByteArrayInputStream(s.getBytes()));
        }

        public static List<GameMode> parseGameModes(InputStream in)
        {
                ParserGameModes parser = new ParserGameModes(in);
                try {
                        return parser.main();
                }catch(Exception e){
                    Log.e("Error reading game modes file", e.getMessage());
                        return new ArrayList<GameMode>(0);
                }
        }

  final public List<GameMode> main() throws ParseException {
  List<GameMode> list; GameMode gameMode; int version;
  Token t;
    list = new ArrayList<GameMode>();
    version = 1;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VERSION:
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VERSION:
        jj_consume_token(VERSION);
        jj_consume_token(DDOT);
        t = jj_consume_token(NUM);
        jj_consume_token(SEMICOLON);
                                                     version = Integer.parseInt(t.image);
        break;
      case ID:
        t = jj_consume_token(ID);
        jj_consume_token(LBRA);
        gameMode = readGameMode(t.image);
        jj_consume_token(RBRA);
                                                                    list.add(gameMode);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public GameMode readGameMode(String modeName) throws ParseException {
  GameMode mode; Token t;
    mode = new GameMode();
    mode.setName(modeName);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HITS:
      case MESSAGES_MODE:
      case TIME_SAVE:
      case FULL_SHIELD:
      case TIME_LIMIT:
      case BONUS_PLAY:
      case SHIPS:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HITS:
        jj_consume_token(HITS);
        jj_consume_token(DDOT);
        readShots(mode);
        jj_consume_token(SEMICOLON);
        break;
      case MESSAGES_MODE:
        jj_consume_token(MESSAGES_MODE);
        jj_consume_token(DDOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NORMAL:
          jj_consume_token(NORMAL);
                     mode.setShowKind(MessagesMode.NORMAL);
          break;
        case NDELAY:
          jj_consume_token(NDELAY);
          t = jj_consume_token(NUM);
                                 mode.setShowKind(MessagesMode.NDELAY); mode.setShowKindParameters(Integer.parseInt(t.image));
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(SEMICOLON);
        break;
      case TIME_SAVE:
        jj_consume_token(TIME_SAVE);
        jj_consume_token(DDOT);
        t = jj_consume_token(DECIMAL);
                                             mode.setTimeSave(Double.parseDouble(t.image));
        jj_consume_token(SEMICOLON);
        break;
      case FULL_SHIELD:
        jj_consume_token(FULL_SHIELD);
        jj_consume_token(DDOT);
        t = jj_consume_token(DECIMAL);
                                               mode.setFullShield(Float.parseFloat(t.image));
        jj_consume_token(SEMICOLON);
        break;
      case TIME_LIMIT:
        jj_consume_token(TIME_LIMIT);
        jj_consume_token(DDOT);
        readTimeLimit(mode);
        jj_consume_token(SEMICOLON);
        break;
      case BONUS_PLAY:
        jj_consume_token(BONUS_PLAY);
        jj_consume_token(LBRA);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FIRST_BLOOD:
          case KILL:
          case DOUBLE_KILL:
          case TRIPLE_KILL:
          case ULTRA_KILL:
          case RAMPAGE:
          case NO_WATER_IN_A_ROW:
          case KILLING_SPREE:
          case DOMINATING:
          case MEGA_KILL:
          case UNSTOPPABLE:
          case WICKED_SICK:
          case MONSTER_KILL:
          case GODLIKE:
          case HOLY_SHIT:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_3;
          }
          bonusPlay(mode);
        }
        jj_consume_token(RBRA);
        break;
      case SHIPS:
        jj_consume_token(SHIPS);
        jj_consume_token(LBRA);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_4;
          }
          ships(mode);
        }
        jj_consume_token(RBRA);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return mode;}
    throw new Error("Missing return statement in function");
  }

  final public void readShots(GameMode mode) throws ParseException {
  List<List<KindShot>> listShots; List<KindShot> list;
    listShots = new ArrayList<List<KindShot>>();
    list = readShotsAux();
    listShots.add(list);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      list = readShotsAux();
                                      listShots.add(list);
    }
    mode.setTotalShoots(listShots);
    {if (true) return;}
  }

  final public List<KindShot> readShotsAux() throws ParseException {
  KindShot kindShot; Token t; int n; List<KindShot> list;
    list = new ArrayList<KindShot>();
    label_6:
    while (true) {
      kindShot = readKindShot();
      t = jj_consume_token(NUM);
      n = Integer.parseInt(t.image);
      for (int i = 0; i < n; i++) {
        list.add(kindShot);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NORMAL_SHOT:
      case INDESTRUCTIBLE_SHOT:
      case CAMERA_SHOT:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
    }
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public KindShot readKindShot() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NORMAL_SHOT:
      jj_consume_token(NORMAL_SHOT);
                    {if (true) return KindShot.NormalShot;}
      break;
    case INDESTRUCTIBLE_SHOT:
      jj_consume_token(INDESTRUCTIBLE_SHOT);
                            {if (true) return KindShot.IndestructibleShot;}
      break;
    case CAMERA_SHOT:
      jj_consume_token(CAMERA_SHOT);
                    {if (true) return KindShot.CameraShot;}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void readTimeLimit(GameMode mode) throws ParseException {
  Token t, t2, t3;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNLIMITED:
      jj_consume_token(UNLIMITED);
                    mode.setTimeLimit(0);
      break;
    case NUM:
      t = jj_consume_token(NUM);
                  mode.setTimeLimit(Integer.parseInt(t.image));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        t2 = jj_consume_token(NUM);
                             mode.setTimeLimitAndPerTurn(Integer.parseInt(t.image), Integer.parseInt(t2.image));
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          jj_consume_token(COMMA);
          t3 = jj_consume_token(NUM);
                                   mode.setTimeLimitPerTurnExtra(Integer.parseInt(t.image), Integer.parseInt(t2.image), Integer.parseInt(t3.image));
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void bonusPlay(GameMode mode) throws ParseException {
  BonusPlay bonus; Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FIRST_BLOOD:
      jj_consume_token(FIRST_BLOOD);
      jj_consume_token(DDOT);
                             bonus = new BonusPlay(ConditionType.FirstBlood);
      readBonusPlay(bonus);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_7;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case KILL:
      jj_consume_token(KILL);
      jj_consume_token(DDOT);
                      bonus = new BonusPlay(ConditionType.Kill);
      readBonusPlay(bonus);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_8;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case DOUBLE_KILL:
      jj_consume_token(DOUBLE_KILL);
      jj_consume_token(DDOT);
                             bonus = new BonusPlay(ConditionType.DoubleKill);
      readBonusPlay(bonus);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case TRIPLE_KILL:
      jj_consume_token(TRIPLE_KILL);
      jj_consume_token(DDOT);
                             bonus = new BonusPlay(ConditionType.TripleKill);
      readBonusPlay(bonus);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_10;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case ULTRA_KILL:
      jj_consume_token(ULTRA_KILL);
      jj_consume_token(DDOT);
                            bonus = new BonusPlay(ConditionType.UltraKill);
      readBonusPlay(bonus);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_11;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case RAMPAGE:
      jj_consume_token(RAMPAGE);
      jj_consume_token(DDOT);
                         bonus = new BonusPlay(ConditionType.Rampage);
      readBonusPlay(bonus);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_12;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case NO_WATER_IN_A_ROW:
      jj_consume_token(NO_WATER_IN_A_ROW);
      t = jj_consume_token(NUM);
      jj_consume_token(DDOT);
                                               bonus = new BonusPlay(ConditionType.NoWaterInARow, Integer.parseInt(t.image));
      readBonusPlay(bonus);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_13;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case KILLING_SPREE:
      jj_consume_token(KILLING_SPREE);
      jj_consume_token(DDOT);
                               bonus = new BonusPlay(ConditionType.KillingSpree);
      readBonusPlay(bonus);
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_14;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case DOMINATING:
      jj_consume_token(DOMINATING);
      jj_consume_token(DDOT);
                            bonus = new BonusPlay(ConditionType.Dominating);
      readBonusPlay(bonus);
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_15;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case MEGA_KILL:
      jj_consume_token(MEGA_KILL);
      jj_consume_token(DDOT);
                           bonus = new BonusPlay(ConditionType.MegaKill);
      readBonusPlay(bonus);
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_16;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case UNSTOPPABLE:
      jj_consume_token(UNSTOPPABLE);
      jj_consume_token(DDOT);
                             bonus = new BonusPlay(ConditionType.Unstoppable);
      readBonusPlay(bonus);
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_17;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case WICKED_SICK:
      jj_consume_token(WICKED_SICK);
      jj_consume_token(DDOT);
                             bonus = new BonusPlay(ConditionType.WickedSick);
      readBonusPlay(bonus);
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_18;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case MONSTER_KILL:
      jj_consume_token(MONSTER_KILL);
      jj_consume_token(DDOT);
                              bonus = new BonusPlay(ConditionType.MonsterKill);
      readBonusPlay(bonus);
      label_19:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[25] = jj_gen;
          break label_19;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case GODLIKE:
      jj_consume_token(GODLIKE);
      jj_consume_token(DDOT);
                         bonus = new BonusPlay(ConditionType.Godlike);
      readBonusPlay(bonus);
      label_20:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_20;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    case HOLY_SHIT:
      jj_consume_token(HOLY_SHIT);
      jj_consume_token(DDOT);
                           bonus = new BonusPlay(ConditionType.HolyShit);
      readBonusPlay(bonus);
      label_21:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[27] = jj_gen;
          break label_21;
        }
        jj_consume_token(COMMA);
        readBonusPlay(bonus);
      }
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    mode.addPossibleBonus(bonus);
  }

  final public void readBonusPlay(BonusPlay bonus) throws ParseException {
  Token t; List<KindShot> list;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTRA_TURN:
      jj_consume_token(EXTRA_TURN);
      jj_consume_token(LPAR);
      list = readShotsAux();
      jj_consume_token(RPAR);
                                                           bonus.addAction(new GameBonus.ExtraTurn(list));
      break;
    case EXTRA_TIME:
      jj_consume_token(EXTRA_TIME);
      jj_consume_token(LPAR);
      t = jj_consume_token(NUM);
      jj_consume_token(RPAR);
                                                 bonus.addAction(new GameBonus.ExtraTime(Integer.parseInt(t.image)));
    {if (true) return;}
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
